tests/neg/given-ambiguous-default-2.check
-- [E172] Type Error: tests/neg/given-ambiguous-default-2.scala:18:23 --------------------------------------------------
18 |def f: Unit = summon[C] // error: Ambiguous given instances
   |                       ^
   |No best given instance of type C was found for parameter x of method summon in object Predef.
   |I found:
   |
   |    given_C(a = /* ambiguous: both given instance a1 and given instance a2 match type A */summon[A], this.given_C$default$2)
   |
   |But both given instance a1 and given instance a2 match type A.
